[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Assets/Both/Walk1.png" type="Texture" id=1]
[ext_resource path="res://Player/Assets/Both/Idle.png" type="Texture" id=2]
[ext_resource path="res://Player/Assets/Both/Grab.png" type="Texture" id=3]
[ext_resource path="res://Player/Assets/Both/Walk2.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/Both/Wheel/Walk1.png" type="Texture" id=5]
[ext_resource path="res://Player/Assets/Both/Dress/WalkYohe1.png" type="Texture" id=6]
[ext_resource path="res://Player/Assets/Both/Dress/IdleYohe.png" type="Texture" id=7]
[ext_resource path="res://Player/Assets/Both/Wheel/Idle.png" type="Texture" id=8]
[ext_resource path="res://Player/Assets/Both/Dress/WalkYohe2.png" type="Texture" id=9]
[ext_resource path="res://Player/End/AleSoloEnd.gd" type="Script" id=10]
[ext_resource path="res://Sounds/hitHurtBoss.wav" type="AudioStream" id=11]
[ext_resource path="res://Objects/Heart/Heart.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sounds/heart.wav" type="AudioStream" id=13]

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.5
height = 5.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle4",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idle2",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle3",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "grab",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk4",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "Damage"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.025, 0.075, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 1.2 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"

[node name="AleYoheEnd" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="RotTween" type="Tween" parent="."]

[node name="STween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 4 )
anims/Idle = SubResource( 5 )

[node name="GrabSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="HeartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Heart" parent="." instance=ExtResource( 12 )]
visible = false
